--- a/src/components/content-carousel/content-carousel.scss
+++ b/src/components/content-carousel/content-carousel.scss
@@ -9,10 +9,11 @@
   @include max-breakpoint("md") {
     gap: 100px;
   }
-  @include between-breakpoints("xs", "sm") {
+  @include between-breakpoints("xs", "s") {
     gap: 30px;
   }
 }
+
 .content-carousel__carousel {
   margin-top: -40px;
   width: 100%;
@@ -24,7 +25,7 @@
   @include max-breakpoint("md") {
     margin-top: -30px;
   }
-  @include between-breakpoints("xs", "sm") {
+  @include between-breakpoints("xs", "s") {
     margin-top: -20px;
   }
 }
@@ -42,7 +43,7 @@
     width: 550px;
     height: 360px;
   }
-  @include between-breakpoints("xs", "sm") {
+  @include between-breakpoints("xs", "s") {
     width: 280px;
     height: 184px;
   }
@@ -62,11 +63,14 @@
   @include max-breakpoint("lg") {
     width: calc(100% - 200px);
   }
-  @include between-breakpoints("xs", "sm") {
+  @include max-breakpoint("md") {
+    padding-bottom: 15px;
+  }
+  @include between-breakpoints("xs", "s") {
     display: none;
   }
 }
-.content-carousel_buttons {
+.content-carousel_button-wrapper {
   display: flex;
   justify-content: space-between;
 }
@@ -93,7 +97,7 @@
   @include max-breakpoint("lg") {
     width: calc(100% - 200px);
   }
-  @include between-breakpoints("xs", "sm") {
+  @include between-breakpoints("xs", "s") {
     width: calc(100% - 40px);
     flex-direction: column-reverse;
     gap: 20px;
@@ -110,12 +114,12 @@
 .content-carousel__slider-details {
   flex-direction: column;
   width: 70%;
-  height: 200px;
+  height: 205px;
   & .button-cta {
     margin-left: unset;
     align-self: flex-start;
   }
-  @include between-breakpoints("xs", "sm") {
+  @include between-breakpoints("xs", "s") {
     width: 100%;
     height: auto;
     & .button-cta {
@@ -142,16 +146,23 @@
     margin-bottom: 10px;
   }
 }
+
 .content-carousel__slider-highlight {
   font-family: $font-roboto;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 22.4px;
   color: $text;
   margin-bottom: 30px;
+  height: 65px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
   @include between-breakpoints("xs", "sm") {
-    font-size: 1.0625rem;
-    line-height: 23.8px;
+    font-size: 0.9375rem;
+    line-height: 21px;
   }
 }
 .content-carousel__carousel-progress-wrapper {
