--- a/src/components/mobile-menu/mobile-menu.scss
+++ b/src/components/mobile-menu/mobile-menu.scss
@@ -3,7 +3,7 @@
 .mobile-menu {
   display: none;
   margin-left: 15px;
-  @include between-breakpoints("xs", "sm") {
+  @include max-breakpoint("912px") {
     display: block;
   }
 }
@@ -15,10 +15,22 @@
   align-items: center;
   justify-content: center;
 }
+.mobile-menu__open-icon {
+  svg {
+    width: 42px;
+    height: 42px;
+  }
+}
+.mobile-menu__close-icon {
+  svg {
+    width: 30px;
+    height: 30px;
+  }
+}
 .mobile-menu__nav {
   position: absolute;
   padding-top: 40px;
-  top: 60px;
+  top: 80px;
   right: 0px;
   width: 100%;
   height: 341px;
