--- a/src/global-style/variables.scss
+++ b/src/global-style/variables.scss
@@ -13,7 +13,8 @@ $font-roboto: var(--font-roboto);
 // Breaking points
 $breakpoints: (
   "xs": 320px,
-  "sm": 744px,
+  "s": 767px,
+  "sm": 912px,
   "md": 1024px,
   "lg": 1280px,
   "xxl": 1920px,
@@ -30,11 +31,19 @@ $breakpoints: (
     @media only screen and (min-width: map.get($breakpoints, $breakpoint)) {
       @content;
     }
+  } @else {
+    @media (min-width: $breakpoint) {
+      @content;
+    }
   }
 }
 @mixin max-breakpoint($breakpoint) {
   @if map.has-key($breakpoints, $breakpoint) {
     @media only screen and (max-width: map.get($breakpoints, $breakpoint)) {
+      @content;
+    }
+  } @else {
+    @media (max-width: $breakpoint) {
       @content;
     }
   }
