--- a/src/components/about-us-block/about-us.scss
+++ b/src/components/about-us-block/about-us.scss
@@ -1,7 +1,7 @@
 @use "@/global-style/variables.scss" as *;
 @use "@/global-style/shared-styles.scss" as *;
 
-.about-us {
+.about-us-block {
   margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
@@ -23,7 +23,7 @@
     gap: 30px;
   }
 }
-.about-us__image-container {
+.about-us-block__image-container {
   flex-shrink: 0;
   width: 594px;
   height: 704px;
@@ -43,7 +43,7 @@
     aspect-ratio: 80/79;
   }
 }
-.about-us__yoe {
+.about-us-block__yoe {
   width: 214px;
   height: 234px;
   border-radius: 15px;
@@ -70,7 +70,7 @@
     left: -15px;
   }
 }
-.about-us__yoe-title {
+.about-us-block__yoe-title {
   display: inline-flex;
   font-family: $font-roboto;
   font-size: 3.125rem;
@@ -95,7 +95,7 @@
     }
   }
 }
-.about-us__yoe-text {
+.about-us-block__yoe-text {
   font-family: $font-roboto;
   font-size: 1.375rem;
   width: 115px;
@@ -111,14 +111,14 @@
     line-height: 15.4px;
   }
 }
-.about-us___right-side {
+.about-us-block___right-side {
   width: 100%;
 }
-.about-us___title {
+.about-us-block___title {
   @extend %block-title;
   display: inline-flex;
 }
-.about-us___sub-title {
+.about-us-block___sub-title {
   margin-top: 30px;
   font-family: $font-roboto;
   font-size: 1.5rem;
@@ -131,7 +131,7 @@
     line-height: 22px;
   }
 }
-.about-us___text {
+.about-us-block___text {
   margin-top: 15px;
   max-height: 290px;
   font-family: $font-roboto;
@@ -150,7 +150,7 @@
     line-height: 22.4px;
   }
 }
-.about-us___product-list {
+.about-us-block___product-list {
   margin-top: 20px;
   list-style: none;
   display: grid;
@@ -164,7 +164,7 @@
     flex-direction: column;
   }
 }
-.about-us___product {
+.about-us-block___product {
   display: flex;
   gap: 15px;
   align-items: center;
@@ -172,7 +172,7 @@
     gap: 10px;
   }
 }
-.about-us___product-icon {
+.about-us-block___product-icon {
   width: 35px;
   height: 35px;
   display: flex;
@@ -190,14 +190,14 @@
     }
   }
 }
-.about-us___product-text {
+.about-us-block___product-text {
   font-family: $font-roboto;
   font-size: 1rem;
   line-height: 19.2px;
   font-weight: 500;
   color: $text;
 }
-.about-us___button {
+.about-us-block___button {
   margin-top: 40px;
   border: none;
   background: $primary;
@@ -217,6 +217,6 @@
     width: 100%;
   }
 }
-.about-us___button:hover {
+.about-us-block___button:hover {
   opacity: 0.9;
 }
