--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -37,6 +37,10 @@
     font-weight: 400;
   }
 }
+.nav__item.active {
+  color: $primary;
+  font-weight: 800;
+}
 .nav__item:hover {
   color: $primary;
 }
