Added modal for form and email delivery function

--- a/src/components/content-carousel/content-carousel.scss
+++ b/src/components/content-carousel/content-carousel.scss
@@ -24,6 +24,8 @@
   -webkit-overflow-scrolling: touch;
   @include max-breakpoint("md") {
     margin-top: -30px;
+    touch-action: pan-x;
+    overscroll-behavior: contain;
   }
   @include between-breakpoints("xs", "s") {
     margin-top: -20px;
