--- a/src/components/faqBlock/faq.scss
+++ b/src/components/faqBlock/faq.scss
@@ -77,6 +77,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   @include between-breakpoints("xs", "s") {
     gap: 5px;
   }
