--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -3,6 +3,54 @@
 
 .form-container {
   width: 100%;
+  position: relative;
+  z-index: 1;
+}
+.form-container__feed-back-overlay.show {
+  z-index: 5;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form-container__feed-back-overlay.hide {
+  display: none;
+}
+.form-container__feed-back {
+  width: 300px;
+  height: 200px;
+  border-radius: 20px;
+  background: $background;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+}
+.form-container__feed-back-text {
+  font-family: $font-roboto;
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 19.8px;
+  color: $primary;
+  text-align: center;
+}
+.form-container__feed-back-button {
+  border: none;
+  padding: 8px 12px;
+  background: $primary;
+  color: $neutral;
+  font-family: $font-roboto;
+  font-size: 1rem;
+  line-height: 19.2px;
+  font-weight: 500;
+  border-radius: 10px;
+  cursor: pointer;
 }
 .form-container__title {
   font-family: $font-roboto;
@@ -75,17 +123,18 @@
   }
 }
 .form-container__form-button {
+  width: 250px;
+  height: 60px;
   align-self: flex-start;
-  padding: 20px 32px;
   border: none;
   background: $primary;
   color: $neutral;
   display: inline-flex;
-  gap: 6px;
+  gap: 10px;
   align-items: center;
   justify-content: center;
   font-family: $font-roboto;
-  font-size: 1rem;
+  font-size: 1.5rem;
   line-height: 19.2px;
   font-weight: 600;
   border-radius: 15px;
@@ -101,13 +150,42 @@
 .form-container__form-button:hover {
   opacity: 0.9;
 }
-.form-container__form-button-icon {
+.form-container__form-button-icon.show {
   display: inline-flex;
   align-items: center;
   svg {
+    width: 30px;
     height: 15px;
   }
 }
+.form-container__form-button-icon.hide {
+  display: none;
+}
+// Loader Styles
+.loader.show {
+  display: block;
+  width: 30px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: $neutral;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+.loader.hide {
+  display: none;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+// Social Link Styles
 .form-container__social-wrapper {
   flex-shrink: 0;
   display: flex;
