--- a/src/global-style/globals.scss
+++ b/src/global-style/globals.scss
@@ -2,7 +2,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  // overflow-x: hidden;
 }
 
 body {
@@ -10,6 +9,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #f0f0f0;
   font-size: 16px;
+}
+body.hide-body {
+  overflow: hidden;
 }
 * {
   box-sizing: border-box;
@@ -19,4 +21,13 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+button,
+a,
+input,
+select,
+textarea {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  outline: none;
 }
