--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -1,6 +1,7 @@
 @use "@/global-style/variables.scss" as *;
 
 .nav__block-item {
+  border: 1px solid red;
   list-style-type: none;
   display: flex;
   gap: 15px;
