--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -35,6 +35,7 @@
   @include between-breakpoints("xs", "sm") {
     font-size: 1.5rem;
     font-weight: 400;
+    line-height: 24px;
   }
 }
 .nav__item.active {
