--- a/src/app/[locale]/about/page.scss
+++ b/src/app/[locale]/about/page.scss
@@ -37,6 +37,13 @@
   }
 }
 .about-us-page__details-wrapper {
+  margin-bottom: 100px;
+  @include max-breakpoint("md") {
+    margin-bottom: 80px;
+  }
+  @include between-breakpoints("xs", "s") {
+    margin-bottom: 40px;
+  }
 }
 .about-us-page__title {
   @extend %block-title;
@@ -76,91 +83,6 @@
     font-size: 1.125rem;
     line-height: 25.2px;
     margin-top: 15px;
-  }
-}
-.about-us-page__metrics-wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  gap: 50px;
-  margin-top: 100px;
-  @include max-breakpoint("md") {
-    margin-top: 80px;
-    gap: 20px;
-  }
-  @include between-breakpoints("xs", "s") {
-    margin-top: 40px;
-    flex-direction: column;
-  }
-}
-.about-us-page__metrics {
-  width: 214px;
-  height: 234px;
-  padding: 0px 10px;
-  border-radius: 15px;
-  background: $background-muted;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  transition: transform 0.3s ease-in-out;
-  @include max-breakpoint("md") {
-    width: 180px;
-    height: 196.822px;
-  }
-  @include between-breakpoints("xs", "s") {
-    width: 100%;
-    height: 376.15px;
-  }
-}
-.about-us-page__metrics:hover {
-  transform: scale(1.05);
-}
-.about-us-page__metrics-text-bold {
-  font-family: $font-roboto;
-  font-size: 3.125rem;
-  line-height: 55px;
-  color: $neutral;
-  font-weight: 800;
-  display: inline-flex;
-  align-items: center;
-  span {
-    font-size: 2rem;
-    line-height: 35.2px;
-    color: $support;
-  }
-  @include max-breakpoint("md") {
-    font-size: 2.1875rem;
-    line-height: 38.5px;
-    span {
-      font-size: 1.5rem;
-      line-height: 26.4px;
-    }
-  }
-  @include between-breakpoints("xs", "s") {
-    font-size: 5rem;
-    line-height: 88px;
-    span {
-      font-size: 3.5rem;
-      line-height: 61.6px;
-    }
-  }
-}
-.about-us-page__metrics-text-small {
-  font-family: $font-roboto;
-  font-size: 1.374rem;
-  line-height: 24.2px;
-  font-weight: 600;
-  color: $neutral;
-  text-align: center;
-  @include max-breakpoint("md") {
-    font-size: 1.125rem;
-    line-height: 21.6px;
-  }
-  @include between-breakpoints("xs", "s") {
-    font-size: 2.1875rem;
-    line-height: 38.5px;
   }
 }
 .about-us-page__certificates-wrapper {
